Try to fix audios coming out of container

--- a/client/src/components/CalmCorner/CalmSounds.css
+++ b/client/src/components/CalmCorner/CalmSounds.css
@@ -1,4 +1,4 @@
-.sound-container {
+.sound-card {
   position: relative;
   width: 85%;
   height: min-content;
